# Proyecto-Anlisis-de-datos-1

./: DiccionarioDatos.txt  README.md  analisis_bivariado.ipynb  analisis_univariado.ipynb  main.ipynb  pyproject.toml
