[project]
name = "taller1ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
